--- a/app/src/main/res/layout/activity_fan.xml
+++ b/app/src/main/res/layout/activity_fan.xml
@@ -16,11 +16,11 @@
             android:layout_weight="1"
             android:src="@drawable/back"
             android:background="#168AD6"
-            android:scaleType= "fitEnd"
+            android:scaleType="fitEnd"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"/>/>
+            android:layout_height="match_parent" />
         <ImageView
             android:id="@+id/imageTitle"
             android:layout_width="0dp"
