--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -48,7 +48,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="360"
@@ -59,51 +58,19 @@
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Please select fan scale:"
+            android:text="Please select time:"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:textSize="20dp" />
 
-        <RadioGroup
-            android:id="@+id/fanGroup"
+        <ListView
+            android:id="@+id/lvTimer"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="50dp"
+            android:layout_marginLeft="30dp"
             android:layout_weight="40"
-            android:layout_marginRight="60dp"
-
-            android:layout_gravity="center_horizontal">
-
-            <RadioButton
-                android:id="@+id/scale0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="Auto" />
-
-            <RadioButton
-                android:id="@+id/scale1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speed1" />
-
-            <RadioButton
-                android:id="@+id/scale2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speed2" />
-
-            <RadioButton
-                android:id="@+id/scale3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speed3" />
-
-            <RadioButton
-                android:id="@+id/scale4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speed4" />
-
-        </RadioGroup>
+            android:layout_marginRight="30dp"></ListView>
 
         <View
             android:layout_width="match_parent"
