--- a/app/src/main/res/drawable/btn_shape.xml
+++ b/app/src/main/res/drawable/btn_shape.xml
@@ -6,6 +6,5 @@
         android:right="16dp"
         android:top="10dp"
         android:bottom="10dp"/>
-    <stroke android:width="1dp"
-        android:color="@color/btn_shape"/>
+    <stroke android:width="1dp" />
 </shape>
