22#除湿可调风速

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,431 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:orientation="vertical">
-    <!--标题区-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#168AD6"
-        android:orientation="horizontal"
-        android:layout_weight="50">
+    tools:context=".MainActivity">
 
-        <ImageButton
-            android:id="@+id/btReturn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:background="#168AD6"
-            android:scaleType="fitEnd"
-            android:src="@drawable/back"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-        <ImageView
-            android:id="@+id/imageTitle"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:src="@drawable/type"
-            android:scaleType="fitEnd"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"/>
-
-        <ImageButton
-            android:id="@+id/btSetting"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:background="#168AD6"
-            android:scaleType="fitCenter"
-            android:src="@drawable/setting"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-    </LinearLayout>
-    <!--状态区-->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="248"
-        android:background="#CCD0C3"
-        android:orientation="vertical"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp">
-        <!--状态区第一排-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:layout_weight="52">
-            <ImageView
-                android:id="@+id/imageA"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/modea"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to Auto"/>
-            <ImageView
-                android:id="@+id/imageWindmachine"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/windmachine"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to wind"/>
-            <ImageView
-                android:id="@+id/imageCool"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/cool"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to cool"/>
-            <ImageView
-                android:id="@+id/imageWarm"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/warm"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to warm"/>
-            <ImageView
-                android:id="@+id/imageHimidity"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/humidity"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to Humidity"/>
-        </LinearLayout>
-        <!--显示第一条直线-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black"/>
-        <!--状态区中间排-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:layout_weight="120">
-            <!--状态区中间排左边-->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/imageLight"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/light"
-                    android:scaleType="fitCenter"/>
-                <ImageView
-                    android:id="@+id/imageSleep"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/sleep"
-                    android:scaleType="fitCenter"/>
-            </LinearLayout>
-            <!--气温10位-->
-            <ImageView
-                android:id="@+id/imageTemperatureHigh"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="3dp"
-                android:src="@drawable/big8"
-                android:scaleType="fitCenter"/>
-            <!--气温个位-->
-            <ImageView
-                android:id="@+id/imageTemperatureLow"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="3dp"
-                android:src="@drawable/big8"
-                android:scaleType="fitCenter"/>
-            <!--中间排右边-->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/imageUnit"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/celsius"
-                    android:scaleType="fitCenter"/>
-                <ImageView
-                    android:id="@+id/imageChange"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/change"
-                    android:scaleType="fitCenter"/>
-            </LinearLayout>
-        </LinearLayout>
-        <!--中间排第三行-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="14">
-            <ImageView
-                android:id="@+id/imageQuiet"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="52"
-                android:src="@drawable/quiet"
-                android:scaleType="fitCenter"
-                android:contentDescription="show quiet mode"/>
-            <ImageView
-                android:id="@+id/imageNormal"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="72"
-                android:layout_marginLeft="2dp"
-                android:src="@drawable/normal"
-                android:scaleType="fitCenter"
-                android:contentDescription="show normal mode"/>
-            <ImageView
-                android:id="@+id/imageTurbo"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="57"
-                android:layout_marginLeft="2dp"
-                android:src="@drawable/turbo"
-                android:scaleType="fitCenter"
-                android:contentDescription="show turbo mode"/>
-        </LinearLayout>
-        <!--显示一条直线-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/black"/>
-        <!--中间排下面-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="52"
-            android:layout_marginBottom="4dp"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/imageWind"
-                android:layout_width="0dp"
-                android:layout_weight="15"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/autowind"
-                android:scaleType="fitCenter"
-                android:contentDescription="set mode to Humidity"/>
-            <ImageView
-                android:id="@+id/imageTimerHigh"
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/small8"
-                android:scaleType="fitCenter"
-                android:contentDescription="set timer 10X"/>
-            <ImageView
-                android:id="@+id/imageTimerLow"
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="1dp"
-                android:src="@drawable/small8"
-                android:scaleType="fitCenter"
-                android:contentDescription="set timer 1X"/>
-            <View
-                android:id="@+id/viewDot"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="5dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="66dp"
-                android:background="@color/black"/>
-            <ImageView
-                android:id="@+id/imageTimerDecimal"
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/small8"
-                android:scaleType="fitCenter"
-                android:contentDescription="set timer 0x"/>
-            <ImageView
-                android:id="@+id/imageTimer"
-                android:layout_width="0dp"
-                android:layout_weight="15"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/timershow"
-                android:scaleType="fitCenter"
-                android:contentDescription="set timer 10X"/>
-        </LinearLayout>
-    </LinearLayout>
-    <!--按钮区-->
-    <!--第一排按钮-->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="112"
-        android:background="@color/black"
-        android:orientation="vertical"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_margin="12dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <!--第一排按钮-->
-            <ImageButton
-                android:id="@+id/btPower"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btpower"
-                android:scaleType="fitCenter"
-                android:contentDescription="turn on or off"/>
-            <ImageButton
-                android:id="@+id/btWind"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btwind"
-                android:scaleType="fitCenter"
-                android:contentDescription="set timer"/>
-            <ImageButton
-                android:id="@+id/btAdd"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btadd"
-                android:scaleType="fitCenter"
-                android:contentDescription="add temperature"/>
-            <ImageButton
-                android:id="@+id/btLight"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btlight"
-                android:scaleType="fitCenter"
-                android:contentDescription="set light"/>
-            <ImageButton
-                android:id="@+id/btUnit"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btunit"
-                android:scaleType="fitCenter"
-                android:contentDescription="set uint"/>
-        </LinearLayout>
-        <!--第二排按钮-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <ImageButton
-                android:id="@+id/btMode"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btmode"
-                android:scaleType="fitCenter"
-                android:contentDescription="change mode"/>
-
-            <ImageButton
-                android:id="@+id/btTimer"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="#23221F"
-                android:contentDescription="set timer"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bttimer" />
-
-            <ImageButton
-                android:id="@+id/btMinus"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btminus"
-                android:scaleType="fitCenter"
-                android:contentDescription="subtract"/>
-            <ImageButton
-                android:id="@+id/btQuiet"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btquiet"
-                android:scaleType="fitCenter"
-                android:contentDescription="set quiet mode"/>
-            <ImageButton
-                android:id="@+id/btTurbo"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#23221F"
-                android:src="@drawable/btturbo"
-                android:scaleType="fitCenter"
-                android:contentDescription="set turo mode"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
