--- a/app/src/main/res/layout/activity_list_device.xml
+++ b/app/src/main/res/layout/activity_list_device.xml
@@ -48,7 +48,7 @@
         android:layout_weight="350"
         android:layout_marginTop="10dp"/>
     <Button
-        android:id="@+id/discover"
+        android:id="@+id/btcancel"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="30"
@@ -57,5 +57,5 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:textColor="@color/white"
-        android:text="Search Devices"/>
+        android:text="Cancel" />
 </LinearLayout>
